--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Welcome To Travel Room</title>
+    <title>Welcome To Cars & Pricing Field</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
